[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Josh Thompson <jthomp43@uoguelph.ca>"]

[[bin]]
name = "ch1"
path = "src/set1/ch1/main.rs"

[[bin]]
name = "ch2"
path = "src/set1/ch2/main.rs"

[[bin]]
name = "ch3"
path = "src/set1/ch3/main.rs"

[[bin]]
name = "ch4"
path = "src/set1/ch4/main.rs"

[[bin]]
name = "ch5"
path = "src/set1/ch5/main.rs"

[[bin]]
name = "ch6"
path = "src/set1/ch6/main.rs"

[[bin]]
name = "ch7"
path = "src/set1/ch7/main.rs"

[dependencies]
openssl-sys = "0.9"
openssl = "0.10"
